# arcsin

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-470e5badaabddeff591d7a279266f249bce10061241ea33056d4227088bced13.json  query-79f087395bf5a6fedc5fae66ce894e44d6c2dbd85e97acac8f204a28554b3825.json  query-9d2cc73945c6a7504acaee06fcaef000879a0d5639bb508e6fea250de130591a.json  query-a5185f772bd898d9882207b48ac3f8066b082f7bcfdc8cddb0a278a7b4fe5367.json  query-afc895baf81b934868d84f28564caa4b47602d95de54a9fa3028819a7c79dc86.json  query-dc0a44b2e111d59c08f787f5fd758e34a314b7506c2567e46a9b30a66ba7aab4.json  query-e6cfdb22ea42c2f3a543bb0ca68e9db7443b213a74316224472cbd65b4e73f61.json
frontend/: nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Header.jsx  Player.jsx  Sidebar.jsx  TrackList.jsx
frontend/src/context/: AuthContext.jsx  PlaylistContext.jsx
frontend/src/pages/: Friends.jsx  Login.jsx  Playlist.jsx  Register.jsx
migrations/: 20241225215000_create_users_table.sql  20241229200000_create_tracks_table.sql  20260104000000_create_playlists_tables.sql  20260124000000_create_friends_table.sql
server/: lib.rs  server.rs
src/: app.rs  audio.rs  auth.rs  db.rs  friends.rs  lib.rs  main.rs  models.rs  playlist.rs  tracklist.rs  ui.rs
tracklist/: tracklist.rs
