[package]
name = "arcsin"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
anyhow = "1.0"

[[bin]]
name = "server"
path = "server/server.rs"
