[package]
name = "arcsin"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
anyhow = "1.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "time",
] }
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
dotenvy = "0.15.7"
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
time = { version = "0.3.44", features = ["serde-human-readable"] }

[[bin]]
name = "server"
path = "server/server.rs"
